--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,7 +86,7 @@ dependencies:
   bottom_picker: ^1.8.0
   firebase_messaging: any
   zendesk_plugin: ^2.0.0
-  # flutter_datetime_picker: ^1.5.1
+  flutter_datetime_picker: ^1.5.1
 
   google_api_headers: ^1.3.0-dev.0
 
